<resources>
    <string name="app_name">Marico</string>
    <string name="prompt_userid">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="data_uploaded_successfully">Database Uploaded Successfully</string>
    <string name="database_not_uploaded">Database Not Uploaded</string>
    <string name="errordatabase_not_uploaded">Error in Database Uploading</string>
    <string name="errordatabase_not_exporting">Error in Database Exporting</string>
    <string name="new_update_available">New Update Available</string>
    <string name="download_data">Downloading Data</string>
    <string name="checkout_confirmation">Checkout Confirmation</string>
    <string name="entry_menu">Entry Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_menu_activity_name">RB GT Mer.</string>
    <string name="want_download_data">Do you want to Download Data?</string>
    <string name="want_upload_data">Do you want to Upload Data?</string>
    <string name="no_data_for_upload">No Data For Upload</string>
    <string name="title_store_list_download_data">Please Download Data First</string>
    <string name="nonetwork"> No Network Connection. Please Check Your Internet Connection</string>
    <string name="menu_daily_route_plan">Daily Route Plan</string>
    <string name="menu_daily_download">Download Data</string>
    <string name="menu_upload_data">Upload Data</string>
    <string name="menu_performance">Performance</string>
    <string name="menu_training">Training</string>
    <string name="menu_detailer">Consumer Section</string>
    <string name="menu_geotag">Geo Tag</string>
    <string name="menu_exit">Exit</string>
    <string name="store_search">Lookup Route Plan</string>
    <string name="menu_services">Services</string>
    <string name="action_settings">Settings</string>
    <string name="previous_data_upload">Please Upload Previous Data First</string>
    <string name="NodataAvailable">No data available</string>
    <string name="Pleasedownaloaddata">Please download data</string>
    <string name="gps">GPS IS DISABLED...</string>
    <string name="gpsebale">Click ok to enable GPS.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uploaddata">Uploading Data</string>
    <string name="dialog_title">Parinaam</string>
    <string name="notsuppoted">This device is not supported.</string>
    <string name="storefront">Click Store Front Image</string>
    <string name="save">Save</string>
    <string name="title_activity_save_data">Do you want to save the data</string>
    <string name="clickimage">Please click the image</string>
    <string name="title_activity_window">Window/Asset</string>
    <string name="export_database">Export Database</string>
    <string name="Areyou_sure_take_backup"> Are you sure you want to take the backup of your data</string>
    <string name="backup">Backup</string>
    <string name="title_store_list_activity_store_already_done">Store Already Uploaded</string>
    <string name="title_store_list_activity_store_data_uploaded">Store Data Uploaded</string>
    <string name="title_store_list_activity_store_already_checkout">Store Already Checkout</string>
    <string name="title_store_list_activity_store_again_uploaded">Partial Data Uploaded , Please upload data again</string>
    <string name="title_store_list_activity_store_closed">Store Closed</string>
    <string name="title_store_list_activity_already_store_closed">Store Already Closed</string>
    <string name="title_store_list_checkout_Already_filled">Data already filled</string>
    <string name="title_store_list_checkout_current">Please checkout from current store</string>
    <string name="wantcheckout">Are you sure you want to Checkout</string>
    <string name="closed">Close</string>
    <string name="first_geotag_the_store">You need to geotag store.</string>
    <string name="DELETE_ALERT_MESSAGE">Saved data will be lost - Do you want to continue?</string>
    <string name="title_activity_non_working">NonWorkingActivity</string>
    <string name="title_activity_category_dressing">Category Execution</string>
    <string name="datanotfound">Data not found in</string>
    <string name="blank"></string>
    <string name="title_activity_geo_tag_store_list">GeoTagStoreList</string>
    <string name="title_geo_tag_activity_geo_already_done">Store Already Geotagged</string>
    <string name="title_activity_geo_tagging">GeoTaggingActivity</string>
    <string name="takeimage"> Please Take Image</string>
    <string name="failure">failure</string>
    <string name="select_reason">Select Reason</string>
    <string name="please_select_reason">Please Select Reason</string>
    <string name="data_not_uploaded">Data not uploaded. Please try again.</string>
    <string name="data_uploaded">Database Uploaded Successfully</string>
    <string name="title_activity_dbsrcategory">DBSR Category</string>
    <string name="title_activity_window_checklist">Window Checklist</string>
    <string name="title_activity_window_menu">Window Execution</string>
    <string name="camera_not_found">Camera Not found</string>
    <string name="distance_from_the_store">Distance from Store</string>
    <string name="you_need_to_be_in_the_store">You need to be in the store to Checkin/Checkout</string>
    <string name="meters">meters</string>
    <string name="title_activity_store_profile">StoreProfileActivity</string>
    <string name="title_activity_visi_cooler">VisiCoolerActivity</string>
    <string name="title_activity_posm">PosmActivity</string>
    <string name="title_activity_posmdeployment">POSMDeploymentActivity</string>
    <string name="single_image_error" translatable="false">Please capture image</string>
    <string name="select_reason_error" translatable="false">Please select Drop Down</string>
    <string name="posm_exist_error" translatable="false">Please select POSM exist or not</string>
    <string name="title_activity_focus_product">FocusProductActivity</string>
    <string name="alertsaveData"> Are you sure you want to save data</string>
    <string name="title_activity_new_visi_cooler_activty">NewVisiCoolerActivty</string>
    <string name="title_activity_window_with_brand">Window</string>
    <string name="present">Present</string>
    <string name="close_up">Close Up</string>
    <string name="long_shot">Long shot</string>
    <string name="brand_vsibility">Brand Visibility</string>
    <string name="title_activity_window_brand_visibility">Brand Visibility</string>
    <string name="stock_quantity">Stock Qty</string>
    <string name="fill_quantity">Please fill Quantity</string>
    <string name="select_answer">Please select answer</string>
    <string name="reason">Reason</string>
    <string name="pls_fill_brand_visibility">Please fill Brand Visibility</string>
    <string name="pls_click_closeup">Please click Closeup Image</string>
    <string name="pls_click_longshot">Please click Long Shot Image</string>
    <string name="pl_select_reason">Please select reason</string>
    <string name="title_activity_secondary_visibility">Secondary Visibility</string>
    <string name="title_activity_ctu">CTU</string>
    <string name="pl_select_present">Please select present</string>
    <string name="title_activity_monkeysun">MonkeysunActivity</string>
    <string name="title_activity_back_of_store">BackOfStoreActivity</string>
    <string name="title_activity_jar">JarActivity</string>
    <string name="title_activity_ctu_actiivty">CtuActiivty</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_sos">SOSActivity</string>
    <string name="cat_facing_error">Please enter category facing</string>
    <string name="cat_img_error">Please capture category image</string>
    <string name="brand_facing_error"> Please enter brand facing </string>
    <string name="checklist_error">Please fill checklist data</string>
    <string name="answer_error">All answers are mandatory to fill</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_rules">Password Rules</string>
    <string name="pw_rules">1. Must be between 6 to 8 characters long. \n\n 2. Must contain following combinations \n\n a. Uppercase characters(A-Z) \n b. Lowercase characters(a-z) \n c. Numbers(0-9) \n d. Special characters(@#$%)</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_and_confirm_password_not_match">Password and confirm password does not match</string>
    <string name="space_not_allowed_in_password">Space is not allowed in password</string>
    <string name="new_password_not_equal_to_old_password">New password should not be equal to old password</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_mpin">MPinActivity</string>
    <string name="error_incorrect_pin">This pin is incorrect</string>
    <string name="error">Error Uploading</string>
    <string name="reference_image">Reference Image</string>
    <string name="brand_facing_category_error">Brand facing cannot be greater than category facing.</string>
    <string name="title_activity_auto_login">AutoLoginActivity</string>
    <string name="title_activity_one_qad">One QAD</string>
    <string name="oneqad_comment">oops your answer is wrong. Correct answer is highlighted in green.</string>
    <string name="title_activity_opening_stock">OpeningStock</string>
    <string name="title_activity_mid_day_stock">MidDayStock</string>
    <string name="title_activity_closing_stock">ClosingStock</string>
    <string name="title_activity_share_of_shelf">ShareOfShelfActivity</string>
    <string name="title_activity_tester_stock">ShareOfShelfActivity</string>
    <string name="title_activity_paid_visibility">PaidVisibilityActivity</string>
    <string name="title_activity_additonalvisibility">Additonalvisibility</string>
    <string name="title_activity_performance">PerformanceActivity</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="title_activity_detailer">DetailerActivity</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="title_activity_new_performance">NewPerformance</string>
    <string name="title_activity_livon">LivonActivity</string>
    <string name="title_activity_sampling">SamplingActivity</string>
    <string name="title_activity_performance_webview">Performance</string>
    <string name="messageM">All the data will be deleted.\n Are you sure you want to delete the data</string>
    <string name="title_activity_selfie">SelfieActivity</string>
    <string name="title_activity_promotion">PromotionActivity</string>
    <string name="promotion_present_error">Please select promotion present or not</string>
    <string name="reason_id_error">Please select reason</string>
    <string name="image_error">Please click atleast one Image.</string>
    <string name="menu_report">Performance Report</string>
    <string name="mtd_volume">MTD Volume</string>
</resources>