<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cpm.Marico.password.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            >

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="40dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:drawableStart="@android:drawable/ic_lock_idle_lock"
                        android:drawableLeft="@android:drawable/ic_lock_idle_lock"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:drawableStart="@android:drawable/ic_lock_idle_lock"
                        android:drawableLeft="@android:drawable/ic_lock_idle_lock"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:drawableStart="@android:drawable/ic_lock_idle_lock"
                        android:drawableLeft="@android:drawable/ic_lock_idle_lock"/>

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_submit"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/submit"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/outline_info_black_36"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>
