<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview_exists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardUseCompatPadding="true"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ColorPrimaryLight"
                >

                <TextView
                    android:id="@+id/tv_window"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="Window"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/ref_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ref_images_white"
                    android:layout_margin="10dp"
                   />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_window"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/txt_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/present"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/text_size_normal" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rouded_corner">

                    <Spinner
                        android:id="@+id/spin_present"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt_reason"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reason"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/text_size_normal" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rouded_corner">

                    <Spinner
                        android:id="@+id/spin_reason"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textSize="12sp" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_present_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/lay_Camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/lin_camera"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/cam_close_up"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@mipmap/camera_pink" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/close_up"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_normal"
                            android:layout_margin="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/cam_long_shot"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@mipmap/camera_pink" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/long_shot"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_normal"
                            android:layout_margin="5dp"/>
                    </LinearLayout>


                </LinearLayout>


                <Button
                    android:id="@+id/btn_brand_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_vsibility"
                    android:background="@color/ColorPrimaryLight"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_margin="5dp"/>
            </LinearLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>